修复漏斗图图例被截断问题：调整图例位置和样式
修复内容：
1. 限制横向图例最大宽度：
   - 添加max-width: calc(100% - 16px)，避免图例超出容器
   - 确保图例不会被截断

2. 调整图例位置：
   - right从4px调整为8px，增加右边距
   - 添加left: auto，确保定位正确

3. 优化图例样式：
   - padding从8px 12px调整为6px 10px，让图例更紧凑
   - font-size从11px调整为10px，让文字更小更紧凑
   - 避免图例占用过多空间

4. 增加chart-body右侧padding：
   - 添加padding-right: 12px，为图例留出空间

现在图例不会被截断，完整显示所有标签

--- a/11-funnel/index.html
+++ b/11-funnel/index.html
@@ -120,7 +120,7 @@
                 <div class="filter-summary" id="filterSummary"></div>
             </div>
         </div>
-        <div class="chart-body md">
+        <div class="chart-body md" style="padding-right: 12px;">
             <div class="custom-legend horizontal">
                 <div class="legend-item">
                     <span class="legend-icon-circle" style="background: #5B8FF9;"></span>
