优化矩形树图：增大尺寸并居中显示
优化内容：
1. 减少chart-body padding：
   - 从默认padding改为统一的padding: 8px
   - 让图表容器更紧凑，图表占用更多空间

2. 平衡图表padding，让图表居中：
   - PC端：从[40,160,24,24]调整为[25,20,25,20]
   - 移动端：添加[20,20,20,20]
   - 左右padding平衡，图表居中显示
   - 横向图例不需要太多右侧空间（160px），减少到20px

3. 效果：
   - 图表更大，留白大幅减少
   - 图表居中显示，不再靠左
   - 空间利用更好

--- a/14-treemap/index.html
+++ b/14-treemap/index.html
@@ -120,7 +120,7 @@
                 <div class="filter-summary" id="filterSummary"></div>
             </div>
         </div>
-        <div class="chart-body lg" style="position: relative;">
+        <div class="chart-body lg" style="position: relative; padding: 8px;">
             <!-- 自定义图例 - 统一在右侧对齐，不遮挡图表 -->
             <!-- 颜色顺序：研发部(蓝)、市场部(绿)、销售部(橙)、行政部(红)、财务部(紫) -->
             <div class="custom-legend horizontal">
