修复帕累托图单位标签被遮挡问题：调整右Y轴单位标签和图例位置，增加右侧padding

--- a/13-pareto/index.html
+++ b/13-pareto/index.html
@@ -296,7 +296,7 @@ const fontSize = mobile ? 10 : 10;
 const lineWidth = mobile ? 2 : 2;
 const pointSize = mobile ? 4 : 4;
 const borderRadius = mobile ? 4 : 4;
-const basePadding = mobile ? [20, 10, 40, 10] : [25, 10, 45, 10]; // 进一步减少padding，让图表更大，消除留白
+const basePadding = mobile ? [20, 35, 40, 10] : [25, 40, 45, 10]; // 增加右侧padding，为右Y轴单位标签和图例留出空间
 
 const rawData = [
     { type: '界面缺陷', value: 120 },
