进一步增大外部标签环图内径：PC端0.85，移动端0.75，为中心文字留出充足空间

--- a/20-ring/index.html
+++ b/20-ring/index.html
@@ -367,7 +367,7 @@ new G2Plot.Pie('chart-outer', {
     angleField: 'value',
     colorField: 'type',
     radius: mobile ? 0.55 : 0.6, // 进一步减小外半径，为外部标签留出更多空间
-    innerRadius: mobile ? 0.65 : 0.75,  // 增大内径，使圆环更细，确保中心文字完全在圆环内部，不重叠
+    innerRadius: mobile ? 0.75 : 0.85,  // 进一步增大内径，使圆环更细，为中心文字留出充足空间
     appendPadding: mobile ? 20 : 30, // 增加外部padding，为外部标签留出空间，避免文字超出
     color: ['#5B8FF9', '#5AD8A6', '#F6BD16', '#945FB9'],
     label: {
