--- a/20-ring/index.html
+++ b/20-ring/index.html
@@ -366,8 +366,8 @@ new G2Plot.Pie('chart-outer', {
     data,
     angleField: 'value',
     colorField: 'type',
-    radius: mobile ? 0.7 : 0.75, // 增大外半径，使整个圆环更大
-    innerRadius: mobile ? 0.8 : 0.88,  // 相应增大内径，保持圆环粗细比例，为中心文字留出充足空间
+    radius: mobile ? 0.9 : 0.95, // 大幅增大外半径，接近最大值，使圆环更大
+    innerRadius: mobile ? 0.92 : 0.96,  // 相应增大内径，保持圆环粗细比例，为中心文字留出充足空间
     appendPadding: mobile ? 20 : 30, // 增加外部padding，为外部标签留出空间，避免文字超出
     color: ['#5B8FF9', '#5AD8A6', '#F6BD16', '#945FB9'],
     label: {
