修复帕累托图标签被遮挡问题：调整图例和标签位置，增加右边距和padding，确保所有文字完整显示不被截断

--- a/13-pareto/index.html
+++ b/13-pareto/index.html
@@ -296,7 +296,7 @@ const fontSize = mobile ? 10 : 10;
 const lineWidth = mobile ? 2 : 2;
 const pointSize = mobile ? 4 : 4;
 const borderRadius = mobile ? 4 : 4;
-const basePadding = mobile ? [20, 50, 40, 10] : [25, 55, 45, 10]; // 大幅增加右侧padding，为右Y轴标签留出充足空间，避免被滚动条遮挡
+const basePadding = mobile ? [20, 60, 40, 10] : [25, 65, 45, 10]; // 进一步增加右侧padding，为右Y轴标签和图例留出充足空间，确保文字不被截断
 
 const rawData = [
     { type: '界面缺陷', value: 120 },
