feat: 在尺寸规范表格中添加条形图最大/最小厚度参数

--- a/03-bar/index.html
+++ b/03-bar/index.html
@@ -210,6 +210,16 @@
                 <td><code>500px</code></td>
                 <td>条形图通常需要更高的容器</td>
             </tr>
+            <tr>
+                <td><code>maxBarWidth</code></td>
+                <td><code>48px</code></td>
+                <td>条形最大厚度（像素）</td>
+            </tr>
+            <tr>
+                <td><code>minBarWidth</code></td>
+                <td><code>8px</code></td>
+                <td>条形最小厚度（像素）</td>
+            </tr>
         </tbody>
     </table>
 </div>
