--- a/19-indicator/index.html
+++ b/19-indicator/index.html
@@ -155,6 +155,95 @@
             color: #111827;
             letter-spacing: -0.02em;
         }
+        
+        .indicator-with-sub {
+            background: #fff;
+            border-radius: 12px;
+            padding: 24px;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.06), 0 1px 2px rgba(0,0,0,0.04);
+            border: 1px solid rgba(0,0,0,0.06);
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            max-width: 500px;
+        }
+        .indicator-with-sub:hover {
+            box-shadow: 0 4px 16px rgba(0,0,0,0.1), 0 2px 4px rgba(0,0,0,0.06);
+            transform: translateY(-2px);
+        }
+        .indicator-with-sub .main-label {
+            font-size: 13px;
+            color: #6B7280;
+            margin-bottom: 12px;
+            font-weight: 500;
+        }
+        .indicator-with-sub .main-value {
+            font-size: 32px;
+            font-weight: 700;
+            color: #111827;
+            line-height: 1.1;
+            margin-bottom: 8px;
+        }
+        .indicator-with-sub .main-suffix {
+            font-size: 16px;
+            color: #9CA3AF;
+            margin-left: 6px;
+            font-weight: 500;
+        }
+        .indicator-with-sub .sub-indicators {
+            margin-top: 20px;
+            padding-top: 20px;
+            border-top: 1px solid #E5E7EB;
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+            gap: 16px;
+        }
+        .indicator-with-sub .sub-item {
+            display: flex;
+            flex-direction: column;
+        }
+        .indicator-with-sub .sub-label {
+            font-size: 12px;
+            color: #9CA3AF;
+            margin-bottom: 4px;
+        }
+        .indicator-with-sub .sub-value {
+            font-size: 18px;
+            font-weight: 600;
+            color: #111827;
+        }
+        .scenario-badge {
+            display: inline-block;
+            background: linear-gradient(135deg, #E8F3FF 0%, #D6E8FF 100%);
+            color: #5B8FF9;
+            padding: 4px 12px;
+            border-radius: 12px;
+            font-size: 12px;
+            font-weight: 500;
+            margin-bottom: 12px;
+        }
+        .scenario-description {
+            color: #6B7280;
+            font-size: 14px;
+            line-height: 1.6;
+            margin-bottom: 16px;
+        }
+        .scenario-example {
+            background: #F9FAFB;
+            border-left: 3px solid #5B8FF9;
+            padding: 12px 16px;
+            margin-top: 12px;
+            border-radius: 4px;
+        }
+        .scenario-example-title {
+            font-weight: 600;
+            color: #111827;
+            margin-bottom: 8px;
+            font-size: 13px;
+        }
+        .scenario-example-content {
+            color: #6B7280;
+            font-size: 13px;
+            line-height: 1.6;
+        }
     </style>
 </head>
 <body>
@@ -329,6 +418,42 @@ import { ArrowUpOutlined, ArrowDownOutlined } from '@ant-design/icons';
             <div class="content">
                 <div class="label">订单数</div>
                 <div class="value">1,580</div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="spec-section variant-section">
+    <div class="spec-title" style="display: flex; justify-content: space-between; align-items: center;">
+        <div>
+            <span class="scenario-badge">基础场景</span>
+            <div style="margin-top: 8px;">带子指标的KPI卡片</div>
+        </div>
+    </div>
+    <div class="scenario-description">
+        主指标下方展示多个子指标，如季度分解
+    </div>
+    <div class="scenario-example">
+        <div class="scenario-example-title">适用场景：</div>
+        <div class="scenario-example-content">
+            适用于需要展示详细分解的场景，如"今年销售额是多少，各季度如何"。<br>
+            例如：你问达成率，子指标就是销售额和销售目标。
+        </div>
+    </div>
+    <div style="margin-top: 24px;">
+        <div class="indicator-with-sub">
+            <div class="main-label">达成率</div>
+            <div class="main-value">85.6<span class="main-suffix">%</span></div>
+            <div class="trend trend-up">↑ 较目标超出 5.6%</div>
+            <div class="sub-indicators">
+                <div class="sub-item">
+                    <div class="sub-label">销售额</div>
+                    <div class="sub-value">8,560<span style="font-size: 14px; color: #9CA3AF; margin-left: 4px;">万元</span></div>
+                </div>
+                <div class="sub-item">
+                    <div class="sub-label">销售目标</div>
+                    <div class="sub-value">10,000<span style="font-size: 14px; color: #9CA3AF; margin-left: 4px;">万元</span></div>
+                </div>
             </div>
         </div>
     </div>
